--- a/Thesis/thesis-method.tex
+++ b/Thesis/thesis-method.tex
@@ -171,7 +171,7 @@ The GUI was written with the Tk framework\footnote{\url{https://en.wikipedia.org
 \subsubsection{Multithreading}
 Since the test suite read from two serial devices simultaneously, there needed to be a non-blocking methodology that allowed uninterrupted flow control; this was provided from the import of \textit{threading} from the \textit{Thread} library. Once the user started the test, the practice mode began. Here a thread was initiated which created the beep timer. At the end of the audible tone the thread completed and a second thread started passing the arguments of the test cases (either Haptic or Audio) into the method. A third thread was started simultaneously to the second which focussed on getting the tap onsets. These threads worked in parallel during the test case duration and upon completion incremented a counter and passed argument to the data analysis method for logging.
 \subsubsection{Haptic Onset Detection}
-The haptic test cases were broken down into dictionary lists containing arguments to be passed to the \texit{haptic} method. The arguments were dependent on the mode of operation the test case called for, the tempo desired, the time of execution, and whether the tempo was to change dynamically over time.
+The haptic test cases were broken down into dictionary lists containing arguments to be passed to the \textit{haptic} method. The arguments were dependent on the mode of operation the test case called for, the tempo desired, the time of execution, and whether the tempo was to change dynamically over time.
 
 The mode and tempo are written over serial to the haptic device and a start time is recorded. From here the program enters a while loop for the duration of test execution reading in from serial while awaiting the "onset" message. Once received it appends to a list for later data logging.
 
@@ -187,13 +187,13 @@ The onsets were detected via librosa's onsetDetect method which computed the spe
     \caption{Test Case A2a1 Audio Onset Detection Example}
 \end{figure}
 \subsubsection{Audio Rendering}
-
+A mixer object was imported from \textit{pyGame}, a module for loading sound objects and controlling playback. The object was initialized at 16 bit 44.1 kHz over 2 channels with a buffer size of 64. The buffer size was experimented with to balance lowest latency without audio dropout. The playback method loaded the audio file passed through the method argument and set the volume. Once the mixer play method was called a separate \textit{getBusy} object ran in a while loop while the audio was played back to find out if the buffer was still busy or not. This object gathered the audio file playback start time which was appended to a temporary list to be added to the audio onset dictionary list aforementioned and written to a dataframe.
 \subsubsection{Data Logging}
-
+All of the timestamps and onsets were piped into a Pandas dataframe. Pandas is almost like an SQL table and allows for mutable size, different column types, manipulation of axes, arithmetic operations, and easy plotting. Duplicate entries recorded were dropped for same measure along with the first and last values of each test to ensure fairness. From the tap and true onsets, the asynchrony was calculated and stored in milliseconds. From the difference between the current line and next line true onset, the inter onset interval (IOI) was recorded and output in milliseconds. Missed taps were tallied based on null values for tap onsets where true onsets existed. Last, the phase correction response was gleaned as the delta between current and next asynchrony.
 \subsubsection{Sanitization Procedure}\ref{sanitizationProcedure}
-
+It was important to have a method in place for synchronizing results if the user ever missed a tap and tried to get back on beat. Without it, there would be an undesired shift and the asynchrony values would be unrealistically high. The numpy select method was utilized to filter choices based on conditions within an array (or dataframe). A max point of acceptance was established by taking half the IOI added to the true onset. Similarly the mix was taken as half the prior IOI added to the true onset. Every tap onset within a test cases dataframe was shifted through the max and min thresholds to determine whether a tap onset belonged to a different true onset. The new column created was called the \textit{Sanitized Tap Onset} and from here the \textit{Sanitized Asynchrony} was calculated.
 \subsubsection{Plotting}
-
+At the end of the data analysis method a plot based on the current dataframe test case was presented using plotly\footnote{\url{https://plot.ly/}}. This was a snapshot of the time vs. onset and can be seen in Figure \ref{fig:TestCaseFeedbackEx}.
 \subsection{Tap Test Hardware} \label{tap_arduino}
 Closely following the design outlined in \ref{schultz2016tap}, a force sensitive resistor was connected across 5 V and the analog input pin A0 of the Arduino Uno. Bridged between A0 and GND was a 10 K resistor acting as a resistive divider. The code was based on the \textit{$fsr_silent_disc.ino$} developed by Schultz but expanded and modified to better suit this project. 
 
