--- a/Thesis/bibliography/references.bib
+++ b/Thesis/bibliography/references.bib
@@ -236,3 +236,10 @@
   year={2005},
   organization={Romanian Society for Ethnomusicology}
 }
+@inproceedings{stark2009real,
+  title={Real-time beat-synchronous analysis of musical audio},
+  author={Stark, Adam M and Davies, Matthew EP and Plumbley, Mark D},
+  booktitle={Proceedings of the 12th Int. Conference on Digital Audio Effects, Como, Italy},
+  pages={299--304},
+  year={2009}
+}
