--- a/Thesis/thesis-acknowledgments.tex
+++ b/Thesis/thesis-acknowledgments.tex
@@ -9,8 +9,6 @@ First and foremost to whom ideation credit is due, my advisor Professor Stephen 
 
 To Professor Sullivan and Stiles for their accessibility, open-mindedness, and overall support from both a creative and technical standpoint.
 
-To my roommates and close friends, Mike and Craig, for those long nights of brainstorming possibilities and troubleshooting. Thank you for not only being my think tank but for keeping me inspired and grounded.
-
-Also, my dear friend and colleague Garrett, for the drive, motivation, and camaraderie we have been able to experience these past two years. And for his support in proofreading this work.
+To my roommates and close friends, Mike and Craig, for those long nights of brainstorming possibilities and troubleshooting. Thank you for not only being my think tank but for keeping me inspired and grounded. Also, my colleague Garrett, for the drive, motivation, and camaraderie we have been able to experience these past two years. And for his support in proofreading this work.
 
 Last but certainly not least, a special thank you to Rachel for the unending love and support in keeping the light at the end of the tunnel shining.
