--- a/Thesis/thesis-introduction.tex
+++ b/Thesis/thesis-introduction.tex
@@ -3,9 +3,9 @@
 \chapter{Introduction} \label{secIntro}
 The interstice is an intervening space. When applied to a rhythmic context, the interstitial beat can be represented by two distinct states; whether energy exists within this small moment in time or if it does not. 
 
-The underlying question, as applied to the daily practice of a trained musician or the innate entrainment (external rhythmic synchronization) of the average human being, is whether the space between the beat matters. Does filling the space provide an added awareness or preparation for upcoming onsets?
+The underlying question, as applied to the daily practice of a trained musician or the innate entrainment\footnote{within this context entrainment will refer to external rhythmic synchronization} of the average human being, is whether the space between the beat matters. Does filling the space provide an added awareness or preparation for upcoming onsets?
 
-The objective of this work is to display whether a continuous wave, one which leads up to the maximum amplitude of the beat and trails off into a smooth decay, exhibits differentiation from it's instantaneous counterpart in communicating regular or irregular pulses. To quantify this differentiation, an expansive set of analog and discrete tap synchronization tests spanning the modalities of sound and touch are conducted across a group of musicians, amateurs, and non-musicians.
+The objective of this work is to quantitatively discern whether a continuous wave, one which leads up to the maximum amplitude of the beat and trails off into a smooth decay, exhibits differentiation from it's instantaneous counterpart in communicating regular or irregular pulses. To quantify this differentiation, an expansive set of analog and discrete tap synchronization tests spanning the modalities of sound and touch are conducted across a group of musicians, amateurs, and non-musicians.
 
 Ancillary to this work, a haptic wearable is prototyped and evaluated for design optimization with an overarching goal of translating the gestural motion of the conductor.
 
